k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-app-service
  namespace: tasky-lab
spec:
  selector:
    app: tasky-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
